# mechinterp

./: .gitignore  README.md
.cursor/rules/: overview.mdc
backend/: .example.env  Dockerfile  config.py  main.py  modal_app.py  nixpack.toml  pyproject.toml  test.http
backend/src/: config.py  helpers.py  main.py  modal_app.py  schemas.py  state.py
backend/src/routers/: logitlens.py  steering.py
backend/src/services/: logitlens.py  steering.py
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/asymmetric-steering-effects/: page.tsx
frontend/app/logitlens/: model-selector.tsx  page.tsx
frontend/app/logitlens/components/: Heatmap.tsx
frontend/app/steering-demo/: page.tsx  presets.ts
frontend/components/: logit-lens-visualizer.tsx  model-selector.tsx  theme-toggle.tsx
frontend/components/ui/: button.tsx  select.tsx
frontend/components/ui/logitlens/: Heatmap.tsx  LogitLens.tsx
frontend/public/presets/: steering-presets.json
frontend/types/: react-plotly.d.ts
