[project]
name = "logitlens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "modal>=1.1.4",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
# On prod, these are installed in modal_app.py
dev = [
    "einops>=0.8.1",
    "ipykernel>=6.30.1",
    "torch>=2.8.0",
    "transformer-lens>=2.16.1",
    "transformers>=4.56.1",
]
